--- a/task1.html
+++ b/task1.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <table border="1"bordercolour="White" bgcolor="skyblue">
+    <tr>
+        <td> <bold> Firstname</bold></td>
+        <td><bold> Lastname</bold></td>
+        <td><bold> Age</bold></td>
+
+    </tr>
+    <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>Eve</td>
+        <td>Jackson</td>
+        <td>94</td>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>80</td>
+    </tr>
+   </table>
 </head>
-<style>
-    td{
-    text-align:center;}
-    h6{
-    text-align:left;
-    }
-    </style>
-<body>    
-    <table border="1" bordercolor="white" bgcolor="sky blue">
-        <tr>
-            <td><h6>Firstname</h6></td>
-            <td><h6>Lastname</h6></td>
-            <td><h6>Age</h6></td>
-        </tr>
-        <tr>
-            <td>Jill</td>
-            <td>Smith</td>
-            <td>50</td>
-        </tr>
-        <tr>
-            <td>Eve</td>
-            <td>Jackson</td>
-            <td>94</td>
-        </tr> 
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
-        </tr>
-
-    </table>
-
+<body>
     
 </body>
 </html>
