--- a/task11.html
+++ b/task11.html
@@ -52,7 +52,7 @@
 
 <body>
     <form class="image1">
-        <image src="image.png" class="image"></image><br>
+        <image src="image.jpeg" class="image"></image><br>
         <div class="name">
             <label for="" text-align="center">Username</label><br>
             <input id="name2" type="text" placeholder="Enter Username">
